{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 644,
  "lineage": "1904d28f-994e-01bc-66c9-c0c90f5ee9ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00384fba5f75ceb85",
            "association_id": "eipassoc-0e856a181b73b8056",
            "domain": "vpc",
            "id": "eipalloc-00384fba5f75ceb85",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd785bb18ed66db8",
            "private_dns": "ip-10-10-0-67.ec2.internal",
            "private_ip": "10.10.0.67",
            "public_dns": "ec2-54-146-246-146.compute-1.amazonaws.com",
            "public_ip": "54.146.246.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_elastic_ip"
            },
            "tags_all": {
              "Name": "my_elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:097018296722:instance/i-01783b761ae781dcd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01783b761ae781dcd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kaaju",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00850d1a38ae290a5",
            "private_dns": "ip-10-10-0-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.84",
            "public_ip": "18.209.228.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c316c59b4b272ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0993fef721e480d43"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e2b82bb916f6915",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0993fef721e480d43"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg_pub",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pvt_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:097018296722:instance/i-0d00d6296f1da86bb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d00d6296f1da86bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kaaju",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfe291bfe5ec0b5b",
            "private_dns": "ip-10-10-2-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad958e0f453a759b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f330410c963e7057"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aac36ef31a2026ea",
            "tags": {
              "Name": "Private_instance"
            },
            "tags_all": {
              "Name": "Private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f330410c963e7057"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg_pvt",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:internet-gateway/igw-0a767a0442f830724",
            "id": "igw-0a767a0442f830724",
            "owner_id": "097018296722",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:loadbalancer/app/ApplicationLoadBalancer/5c8372cee9af471b",
            "arn_suffix": "app/ApplicationLoadBalancer/5c8372cee9af471b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ApplicationLoadBalancer-2068715969.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:097018296722:loadbalancer/app/ApplicationLoadBalancer/5c8372cee9af471b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ApplicationLoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0993fef721e480d43",
              "sg-0f330410c963e7057"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e2b82bb916f6915"
              },
              {
                "subnet_id": "subnet-0aac36ef31a2026ea"
              }
            ],
            "subnets": [
              "subnet-00e2b82bb916f6915",
              "subnet-0aac36ef31a2026ea"
            ],
            "tags": {
              "Name": "app-load-balancer"
            },
            "tags_all": {
              "Name": "app-load-balancer"
            },
            "vpc_id": "vpc-0a6a4fd856a090c98",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.pvt_instance",
            "aws_lb_target_group.tg",
            "aws_security_group.my_sg_pub",
            "aws_security_group.my_sg_pvt",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:listener/app/ApplicationLoadBalancer/5c8372cee9af471b/8bd49b6469edfdd5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:097018296722:listener/app/ApplicationLoadBalancer/5c8372cee9af471b/8bd49b6469edfdd5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:loadbalancer/app/ApplicationLoadBalancer/5c8372cee9af471b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "listner-1"
            },
            "tags_all": {
              "Name": "listner-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.pvt_instance",
            "aws_lb.app_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.my_sg_pub",
            "aws_security_group.my_sg_pvt",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def",
            "arn_suffix": "targetgroup/TargetGroup/b312bec12d1b3def",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg"
            },
            "tags_all": {
              "Name": "tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "dependencies": [
            "aws_instance.pvt_instance",
            "aws_security_group.my_sg_pvt",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def-20230201170418776900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def",
            "target_id": "i-01783b761ae781dcd"
          },
          "dependencies": [
            "aws_instance.pub_instance",
            "aws_instance.pvt_instance",
            "aws_lb_target_group.tg",
            "aws_security_group.my_sg_pub",
            "aws_security_group.my_sg_pvt",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def-20230201170418911200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:097018296722:targetgroup/TargetGroup/b312bec12d1b3def",
            "target_id": "i-0d00d6296f1da86bb"
          },
          "dependencies": [
            "aws_instance.pvt_instance",
            "aws_lb_target_group.tg",
            "aws_security_group.my_sg_pvt",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00384fba5f75ceb85",
            "connectivity_type": "public",
            "id": "nat-0f5db7f16f8ffb8ab",
            "network_interface_id": "eni-0bd785bb18ed66db8",
            "private_ip": "10.10.0.67",
            "public_ip": "54.146.246.146",
            "subnet_id": "subnet-00e2b82bb916f6915",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a767a0442f830724",
            "id": "r-rtb-05760eaf1739217a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05760eaf1739217a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_rts",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e1ab1abc20617fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f5db7f16f8ffb8ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e1ab1abc20617fc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat",
            "aws_route_table.my_rts",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:route-table/rtb-05760eaf1739217a1",
            "id": "rtb-05760eaf1739217a1",
            "owner_id": "097018296722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a767a0442f830724",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:route-table/rtb-02e1ab1abc20617fc",
            "id": "rtb-02e1ab1abc20617fc",
            "owner_id": "097018296722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5db7f16f8ffb8ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pvt_rt"
            },
            "tags_all": {
              "Name": "pvt_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_assc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053f9d19ca9fbe9d7",
            "route_table_id": "rtb-05760eaf1739217a1",
            "subnet_id": "subnet-00e2b82bb916f6915"
          },
          "dependencies": [
            "aws_route_table.my_rts",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_assc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fda1fa5bfc97c48",
            "route_table_id": "rtb-05760eaf1739217a1",
            "subnet_id": "subnet-08acbf06270ce316e"
          },
          "dependencies": [
            "aws_route_table.my_rts",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_assc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9a3314ebc8d2b12",
            "route_table_id": "rtb-02e1ab1abc20617fc",
            "subnet_id": "subnet-0aac36ef31a2026ea"
          },
          "dependencies": [
            "aws_route_table.my_rts",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_assc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d217dcfa54d0555",
            "route_table_id": "rtb-02e1ab1abc20617fc",
            "subnet_id": "subnet-0c32966882f559e29"
          },
          "dependencies": [
            "aws_route_table.my_rts",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:security-group/sg-0993fef721e480d43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0993fef721e480d43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230201152127037400000002",
            "name_prefix": "terraform-",
            "owner_id": "097018296722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:security-group/sg-0f330410c963e7057",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f330410c963e7057",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230201152127030900000001",
            "name_prefix": "terraform-",
            "owner_id": "097018296722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:subnet/subnet-00e2b82bb916f6915",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e2b82bb916f6915",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097018296722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet_1"
            },
            "tags_all": {
              "Name": "pub_subnet_1"
            },
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:subnet/subnet-08acbf06270ce316e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08acbf06270ce316e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097018296722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet_2"
            },
            "tags_all": {
              "Name": "pub_subnet_2"
            },
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:subnet/subnet-0aac36ef31a2026ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac36ef31a2026ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097018296722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_subnet_1"
            },
            "tags_all": {
              "Name": "pvt_subnet_1"
            },
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:subnet/subnet-0c32966882f559e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c32966882f559e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097018296722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_subnet_2"
            },
            "tags_all": {
              "Name": "pvt_subnet_2"
            },
            "vpc_id": "vpc-0a6a4fd856a090c98"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097018296722:vpc/vpc-0a6a4fd856a090c98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0551c0b717717b0df",
            "default_route_table_id": "rtb-0a5bfad8318d8c5a7",
            "default_security_group_id": "sg-0eecb946bd6f79b4b",
            "dhcp_options_id": "dopt-0bf27422d207d1a7c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6a4fd856a090c98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5bfad8318d8c5a7",
            "owner_id": "097018296722",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}